# inspire_rh56_hand_ros2_control

./: CMakeLists.txt  README.md  hardware_interface_plugin.xml  package.xml
config/: controller_manager.yaml  inspire_rh56_hand_joint_trajectory_controller.yaml  joint_group_position_controller.yaml  joint_trajectory_controller.yaml
config/foxglove/: hand_ros2_control.json
examples/: test_hand_position.py  test_hand_trajectory.py
include/inspire_rh56_hand_ros2_control/: inspire_rh56_hand_hardware_interface.hpp  visibility_control.hpp
launch/: inspire_rh56_hand_joint_position_control.launch.py  inspire_rh56_hand_joint_trajectory_control.launch.py  inspire_rh56_hand_position_control.launch.py  inspire_rh56_hand_trajectory_control.launch.py
src/: inspire_rh56_hand_hardware_interface.cpp
test/: test_hand_position.py  test_hand_trajectory.py
urdf/: inspire_rh56_hand_left.urdf.xacro  inspire_rh56_hand_macro.ros2_control.xacro  inspire_rh56_hand_right.urdf.xacro  inspire_rh56_hand_ros2_control.xacro
